oracle-free/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle-free
  namespace: database
spec:
  selector:
    app: oracle-free
  ports:
    - port: 80
      targetPort: 1521
