oracle-free/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oracle-free
  namespace: database
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`oracle.lab-hc.cloud`)
      kind: Rule
      services:
        - name: oracle-free
          port: 80
          sticky:
            cookie:
              name: oracle-free_sticky
              httpOnly: true
              sameSite: lax
